--- a/server/package.json
+++ b/server/package.json
@@ -1,27 +1,33 @@
+
 {
   "name": "server",
   "version": "1.0.0",
   "description": "Cheesemiz backend api server",
   "main": "main.ts",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/main.ts"
+    "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/main.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/uuid": "^10.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/nodemailer": "^7.0.1",
     "@types/pg": "^8.15.5",
     "nodemon": "^3.1.10",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.2"
   }
 }
