--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,7 +9,14 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
 
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@config/*": ["config/*"],
+      "@modules/*": ["modules/*"],
+      "@utils/*": ["utils/*"],
+      "@services/*": ["services/*"]
+    }
   },
   "include": ["./src/**/*"],
   "exclude": ["node_modules"]
