added token generation for verifying otp

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -12,6 +12,7 @@
     "skipLibCheck": true,
     "baseUrl": "./src",
     "paths": {
+      "@routes/*": ["routes/*"],
       "@config/*": ["config/*"],
       "@modules/*": ["modules/*"],
       "@utils/*": ["utils/*"],
