--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "server",
   "version": "1.0.0",
@@ -12,9 +11,12 @@
   "dependencies": {
     "@types/uuid": "^10.0.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.18",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.6",
+    "otp-generator": "^4.0.1",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
@@ -24,7 +26,9 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/nodemailer": "^7.0.1",
+    "@types/otp-generator": "^4.0.2",
     "@types/pg": "^8.15.5",
     "nodemon": "^3.1.10",
     "tsconfig-paths": "^4.2.0",
